<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campaign Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pulp_strategy">Pulp Strategy</string>
    <string name="lorrem_ipsum">"Sample error text"</string>
    <string name="venue_address">Venue Address</string>
    <string name="hint">Search Promoters</string>
    <string-array name="roleSelector">
        <item>Promoter</item>
        <item>Superviser</item>
    </string-array>

    <string name="warning">Warning</string>
    <string name="wrong_credentials">Wrong Credentials,Contact Admin</string>
    <string name="supervisor_details">Supervisor Details</string>
    <string name="store_details">Store Details</string>
    <string name="address">Address</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="store_name_chrome_">Store Name(Chrome)</string>
    <string name="a_51_kalkaji">A-51 Kalkaji</string>
    <string name="delhi">Delhi</string>
    <string name="_110095">110095</string>
    <string name="check_in">Check In</string>
    <string name="user_list">User List</string>
    <string name="search">Search</string>
    <string name="phone_icon">\ue604</string>
    <string name="email_icon">\ue602</string>
    <string name="all_promotors">All Promotors</string>
    <string name="fill_reports">Fill Report</string>
    <string name="call_icon">\ue604</string>
    <string name="messageIcon">\ue602</string>
    <string name="smsIcon">\ue901</string>
    <string name="searchIcon">\ue613</string>
    <string name="report_icon">\ue609</string>
    <string name="checkinIcon">\ue606</string>
    <string name="userListIcon">\ue900</string>
    <string name="route_icon">\ue609</string>
    <string name="user_icon">\ue603</string>
    <string name="upload_form_icon">\ue612</string>
    <string name="icon_circle_forward_next">\ue60c</string>
    <string name="icon_circle_back_previous">\ue60d</string>
    <string name="promotor_icon">\ue605</string>
    <string name="supervisor_icon">\ue60a</string>
    <string name="fill_report_icon">\ue60f</string>
    <string name="campagin_placeholder">\ue60b</string>
    <string name="user_placeholder">\ue607</string>
    <string name="check_out_icon">\ue60e</string>
    <string name="error_icon">\ue913</string>
    <string name="route_map">Map</string>
    <string name="store_name">Store Name</string>
    <string name="state">State</string>
    <string name="region">Region</string>
    <string name="refresh">Refresh</string>
    <string name="log_in">Log In</string>
    <string name="promoter">Promoter</string>
    <string name="supervisor">Supervisor</string>
    <string name="back">Back</string>
    <string name="check_out">Check Out</string>
    <string name="fill_report">Fill Report</string>
    <string name="tap_to_post_an_image">Tap to post an Image</string>
    <string name="please_wait">Please Wait</string>
    <string name="submit_button">Submit Button</string>
    <string name="choose_an_account">Choose An Account</string>
    <string name="spash_screen_icon">\ue611</string>
    <string name="next">Next</string>
    <string name="notification">Notification</string>
    <string name="clear_all">Clear All</string>
    <string name="action_search">Search</string>
    <string name="campaignDescIcon">\ue60b</string>
    <string name="campaignDesc">Campaign</string>
    <string name="contactIcon">\ue604</string>
    <string name="contact">Contact</string>
    <string name="timeLineIcon">\ue902</string>
    <string name="timeLine">TimeLine</string>
    <string name="right_arrow_icon">\ue614</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>

</resources>