<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/campaginStoreDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/compaginLogo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/place_holder_orange"
        android:gravity="center"
        android:text="@string/campagin_placeholder"
        android:textColor="@android:color/white"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/storeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/compaginLogo"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/compaginLogo"
        android:text="@string/venue_address"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/storeAddress"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/compaginLogo"
        android:text="@string/store_name_chrome_"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/addLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/storeName"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/compaginLogo"
        android:text="@string/a_51_kalkaji"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/storeState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addLine1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/compaginLogo"
        android:text="@string/delhi"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/storePincode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/storeState"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/compaginLogo"
        android:text="@string/_110095"
        android:textSize="@dimen/normal_text_size" />

    <LinearLayout
        android:id="@+id/iconsLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/compaginLogo"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <View
            android:id="@+id/view8"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.05" />

        <LinearLayout
            android:id="@+id/userListIconText"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.125"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userListIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/userListIcon"
                android:textColor="@color/lightest_orange"
                android:textSize="@dimen/normal_icon" />

            <TextView
                android:id="@+id/userListText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_list"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.00" />

        <LinearLayout
            android:id="@+id/checkinIconText"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.125"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/storeCheckInIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/checkinIcon"
                android:textColor="@color/lightest_orange"
                android:textSize="@dimen/normal_icon" />

            <TextView
                android:id="@+id/checkInText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/check_in"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0" />

        <LinearLayout
            android:id="@+id/routeMapIconText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.125"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/storeRouteMapIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/route_icon"
                android:textColor="@color/lightest_orange"
                android:textSize="@dimen/normal_icon" />

            <TextView
                android:id="@+id/routeMapText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/route_map"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0" />

        <LinearLayout
            android:id="@+id/fillReportIconText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.125"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fillReportIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fill_report_icon"
                android:textColor="@color/GreyLineColor"
                android:textSize="@dimen/normal_icon" />

            <TextView
                android:id="@+id/fillReportText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fill_report"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.05" />
    </LinearLayout>

</RelativeLayout>