<?xml version="1.0" encoding="utf-8"?>
<com.pulp.campaigntracker.utils.CheckableRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dp" >

    <com.pulp.campaigntracker.utils.InertCheckBox
        android:id="@+id/singleitemCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:button="@drawable/single_radio_chice"
        android:focusable="false" />

    <TextView
        android:id="@+id/assignStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/singleitemCheckBox"
        android:text="@string/store_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/heading_textsize" />

    <TextView
        android:id="@+id/assignStoreState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/assignStoreName"
        android:layout_below="@+id/assignStoreName"
        android:layout_marginTop="5dp"
        android:text="@string/state"
        android:textColor="@color/light_black_text"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/assignStoreRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/assignStoreName"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/assignStoreState"
        android:text="@string/region"
        android:textColor="@color/light_black_text"
        android:textSize="@dimen/normal_text_size" />

</com.pulp.campaigntracker.utils.CheckableRelativeLayout>